cmake_minimum_required(VERSION 3.10)
project(gameStory)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

if (APPLE)
    message(STATUS "Configuring gameStory for macOS")
    find_package(SFML 3 REQUIRED COMPONENTS Graphics Window System)
elseif (UNIX)
    message(STATUS "Configuring gameStory for Linux")
    find_package(SFML 3 REQUIRED COMPONENTS Graphics Window System)
elseif (WIN32)
    message(STATUS "Configuring gameStory for Windows")
    find_package(SFML 3 REQUIRED COMPONENTS Graphics Window System)
else()
    message(FATAL_ERROR "Unsupported platform")
endif()

add_executable(gameStory app.cpp)
target_include_directories(gameStory PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_libraries(gameStory PRIVATE SFML::Graphics SFML::Window SFML::System)